2.5 - ?
	- Hide NSFW images in diff viewer (unless NSFW warnings are disabled)
	- Display related boards in recent posts tooltip op homepage
	- Added search box on user list
	- Proper support for multilingual releases
	- Copy-add release feature
	- Automatically fill out title & original title when adding a release
	- Separated VN search filters from search box
	- Tag filers on VN search

2.4 - 2009-06-07
	- Release search + browser + filters
	- Javascript date input
	- More release information:
	  - Screen resolution
	  - Voiced
	  - Freeware/doujin
	  - Animated
	- Show comparable CERO ratings on /r+/edit input field
	- Allow search queries with only one character
	- Removed category filter from /v/all
	- Added expand/collapse feature to the history browser
	- Added tabs on v/r/p/g search fields

2.3 - 2009-04-01
	- No page reload needed when changing rlist status from vn page
	- Random VN quotes to the footer of every page
	- Fixed case-sensitivity for BBCode
	- Homepage shows platform icons for releases
	- Don't show deleted items on /u+ recent changes
	- Catalog number field to release entries
	- Aliases field to producers
	- Various small improvements to the BBcode
	- Various bugfixes
	- Experimental tagging system
	- Renamed thread tags to boards
	- Tiny skin fixes
	- Tagging system

2.2 - 2009-01-16
	- Additional custom CSS field to user profile
	- Search dropdown calls the return function automatically on select
	- Revised the media list
	- Added a checkbox to releases to indicate a patch
	- VN popularity ranking
	- Limit account creation to one account in 24 hours per IP address
	- Fixed error message when uploading VN images larger than 500kB
	- Fixed 3 grammar mistakes related to singular/plural
	- Don't show hidden release relations on producer pages
	- Hide the vote dropdown on v+ pages when the VN is already on the wishlist
	- Don't search for the ADV category when searching for the Game Boy Advance
	- Keep VN relations on r+ pages ordered by title