@@ -7,6 +7,7 @@
 	- Automatically fill out title & original title when adding a release
 	- Separated VN search filters from search box
 	- Tag filers on VN search
+	- Posts browser on user pages
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
